[package]
name = "iowatcherng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# derive is enabled in clap in order to use it in struct with macros
clap = { version = "4.0.27", features = ["derive"] }
bytes = "1.3.0"
itertools = "0.10.5"
metrics = "0.20.1"
metrics-exporter-prometheus = "0.11.0"
tokio = { version = "1.22.0", features = ["full"] }

[build-dependencies]
prost-build = { version = "0.10" }
bindgen = "0.53.1"
