[package]
name = "iowatcherng-exporter"
version = "0.1.0"
edition = "2021"
authors = [ "Stephen Bates <sbates@raithlin.com>", "Guillermo Cifuentes <gcifuentes@escandasoft.eu>" ]

[dependencies]
# derive is enabled in clap in order to use it in struct with macros
clap = { version = "4.0.27", features = ["derive"] }
bytes = "1.3.0"
itertools = "0.10.5"
metrics = "0.20.1"
metrics-exporter-prometheus = "0.11.0"
metrics-util = "0.14.0"
log = "0.4"
env_logger = "0.9.0"
nix = "0.26.1"
tokio = { version = "1.22.0", features = ["full"] }
quinn = "0.9.3"
rustls = { version = "*", features = ["dangerous_configuration", "quic"] }
rustls-pemfile = "1.0.1"
crossbeam = "0.8.2"

[build-dependencies]
prost-build = { version = "0.10" }
bindgen = "0.53.1"
